--- a/AplicacionDeGestion/vistas/CrearModificarClienteFormulario.xaml
+++ b/AplicacionDeGestion/vistas/CrearModificarClienteFormulario.xaml
@@ -7,7 +7,7 @@
         xmlns:inputLayout="clr-namespace:Syncfusion.UI.Xaml.TextInputLayout;assembly=Syncfusion.SfTextInputLayout.WPF"
         xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
         mc:Ignorable="d"
-        Title="Cliente Formulario" Height="450" Width="600" ShowInTaskbar="False" ResizeMode="NoResize">
+        Title="Cliente Formulario" Height="450" Width="600" ShowInTaskbar="False" ResizeMode="NoResize" Icon="../assets/Icons/anadirCliente.ico">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
