--- a/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
+++ b/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
@@ -4,10 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AplicacionDeGestion.vistas"
+        xmlns:proyecto="clr-namespace:AplicacionDeGestion"
         mc:Ignorable="d"
         xmlns:inputLayout="clr-namespace:Syncfusion.UI.Xaml.TextInputLayout;assembly=Syncfusion.SfTextInputLayout.WPF"
         xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
         Title="Vehículo formulario" Height="450" Width="600" ShowInTaskbar="False" ResizeMode="NoResize" Icon="../assets/Icons/añadirVehiculo.ico">
+    <Window.Resources>
+        <proyecto:MarcaConverter x:Key="marcaConverter"></proyecto:MarcaConverter>
+    </Window.Resources> 
+   
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -27,12 +32,12 @@
             </inputLayout:SfTextInputLayout>
             <inputLayout:SfTextInputLayout Margin="15,0" Hint="Matrícula"                                      
                                        HintFloatMode="Float">
-                <TextBox IsReadOnly="True" Text="{Binding Path=Vehiculo.Matricula}"></TextBox>
+                <TextBox Text="{Binding Path=Vehiculo.Matricula}"></TextBox>
             </inputLayout:SfTextInputLayout>
             <StackPanel Orientation="Horizontal" Margin="15,0">
                 <inputLayout:SfTextInputLayout Hint="Marca"
                                        HintFloatMode="Float">
-                    <ComboBox Width="120" ItemsSource="{Binding ListaMarcas}" SelectedItem="{Binding Vehiculo.IdMarca}"></ComboBox>
+                    <ComboBox Width="120" ItemsSource="{Binding Path=ListaMarcas}" SelectedItem="{Binding Vehiculo.IdMarca}"></ComboBox>
                 </inputLayout:SfTextInputLayout>
                 <Button VerticalAlignment="Top" Margin="5" Width="30" Height="30" Command="{Binding AñadirMarcaCommand}">+</Button>
             </StackPanel>
@@ -45,7 +50,6 @@
                                        HintFloatMode="Float">
                 <TextBox Text="{Binding Path=Vehiculo.Tipo}"></TextBox>
             </inputLayout:SfTextInputLayout>
-            <syncfusion:ButtonAdv Command="{Binding ExaminarVehiculoCommand}" HorizontalAlignment="Left" Width="120" Margin="15,0" SizeMode="Normal" Label="Fotografía" SmallIcon ="/assets/Icons/folder.png"/>
         </StackPanel>
     </Grid>
 </Window>
